--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fast-glob": "^3.3.2",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
